syntax = "proto2";

package nfs;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/clients/nfs/config";

////////////////////////////////////////////////////////////////////////////////

message Zone {
    repeated string Endpoints = 1;
}

message ClientConfig {
    map<string, Zone> Zones = 1;
    optional string RootCertsFile = 2;
    optional bool Insecure = 3;
    optional bool DisableAuthentication = 4;
    optional string DurableClientTimeout = 5 [default = "60s"];
    optional string GrpcClientTimeout = 6 [default = "30s"];
}
